(PC-16043)[PRO] fix: Mutliple rewords [squash]

--- a/pro/src/components/pages/Offers/Offer/Stocks/Stocks.scss
+++ b/pro/src/components/pages/Offers/Offer/Stocks/Stocks.scss
@@ -83,7 +83,7 @@ $buttonHeight: rem.torem(40px);
 
     button,
     a {
-      max-width: rem.torem(230px);
+      max-width: rem.torem(270px);
     }
   }
 }
